block-work & block-description

--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -53,6 +53,7 @@
   background-size: cover;
   background-position: center;
   height: 980px;
+  margin-bottom: 180px;
 }
 .header-info__sliders--name {
   padding: 582px 0 100px 60px;
@@ -74,15 +75,15 @@
   max-width: 1216px;
   margin: 0 auto;
 }
+.container .block__title {
+  font-size: 48px;
+  font-weight: 700;
+}
 .container .block-work {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   max-width: 1167px;
-}
-.container .block-work__title {
-  font-size: 48px;
-  margin-top: 180px;
 }
 .container .block-work__one {
   max-width: 543px;
@@ -97,6 +98,7 @@
   font-size: 70px;
   line-height: 110%;
   margin-right: 24px;
+  letter-spacing: -0.08em;
 }
 .container .block-work__one--text {
   display: flex;
@@ -106,8 +108,79 @@
 .container .block-work__one--name {
   font-size: 28px;
   margin-bottom: 8px;
+  letter-spacing: -0.01em;
 }
 .container .block-work__one--description {
   color: rgba(0, 0, 0, 0.5);
   font-size: 20px;
+  letter-spacing: -0.01em;
+}
+.container .block-description {
+  display: flex;
+  margin-top: 180px;
+  margin-bottom: 60px;
+}
+.container .block-description__square {
+  flex-direction: column;
+  margin-right: 197px;
+  width: 531px;
+}
+.container .block-description__square--number {
+  font-size: 90px;
+  font-weight: 500;
+  line-height: 110%;
+  letter-spacing: -0.02em;
+}
+.container .block-description__square--description {
+  margin-top: 21px;
+  font-size: 20px;
+  font-weight: 400;
+}
+.container .block-description__info {
+  font-size: 20px;
+  line-height: 150%;
+  letter-spacing: -0.02em;
+}
+.container .line {
+  border: 1px solid rgba(0, 0, 0, 0.08);
+}
+.container .block-info {
+  margin-top: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.container .block-info__description {
+  flex-direction: column;
+  margin-bottom: 60px;
+}
+.container .block-info__description--project {
+  display: flex;
+  flex-direction: row;
+}
+.container .block-info__description--project-number {
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 100%;
+  letter-spacing: -0.02em;
+}
+.container .block-info__description--project-realization {
+  display: flex;
+  align-items: center;
+  max-width: 148px;
+  font-size: 20px;
+  line-height: 110%;
+  letter-spacing: -0.02em;
+  margin-left: 20px;
+}
+.container .block-info__description--content {
+  margin-top: 32px;
+  max-width: 592px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 160%;
+  letter-spacing: -0.01em;
+}
+.container .block-info img {
+  margin-bottom: 60px;
 }/*# sourceMappingURL=style.css.map */
