--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -423,13 +423,14 @@
         margin-top: 180px;
 
         &__description {
-            margin-top: 48px;
+            margin-top: 38px;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
 
             &--main {
                 background: #EFEFEF;
+                margin-top: 10px;
             }
 
             &--others {
@@ -448,7 +449,8 @@
                 height: 154px;
                 margin-top: 32px;
                 background: #000000;
-                background-color: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%);;
+                background-color: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%);
+                ;
                 background-image: url(../img/block-team/team_21.png);
             }
         }
@@ -499,5 +501,209 @@
         &__photo-3 {
             margin: 16px 19px 0 18px;
         }
+    }
+
+    .block-tour {
+        margin-top: 180px;
+
+        &__title {
+            display: flex;
+            justify-content: space-between;
+
+            &--number {
+                font-weight: 900;
+                font-size: 48px;
+                line-height: 130%;
+                letter-spacing: -0.01em;
+                color: #A7CC4A;
+            }
+
+            &--description {
+                font-size: 18px;
+                line-height: 110%;
+                letter-spacing: -0.02em;
+                color: rgba(0, 0, 0, 0.5);
+            }
+        }
+
+        .small-line--green {
+            width: 80px;
+            border: 2px solid #A7CC4A;
+            margin-top: 32px;
+            margin-bottom: 32px;
+        }
+
+        &__description {
+            font-size: 20px;
+            line-height: 160%;
+            letter-spacing: -0.01em;
+        }
+    }
+
+
+}
+
+.block-sliders {
+    display: flex;
+    margin-top: 64px;
+    justify-content: space-between;
+    margin-bottom: 183px;
+
+    &__card {
+        margin-left: 32px;
+        margin-right: 32px;
+    }
+
+    &__card--description {
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 130%;
+        letter-spacing: -0.01em;
+    }
+}
+
+footer {
+    background: #F5F5F5;
+
+    .block-contact {
+        display: flex;
+        padding-top: 120px;
+
+        &__left {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 80px;
+            margin-right: 136px;
+
+            .iframe {
+                margin-top: 20px;
+            }
+        }
+
+        &__info {
+            display: flex;
+            margin-top: 40px;
+
+            &--name {
+                font-size: 18px;
+                line-height: 120%;
+                letter-spacing: -0.01em;
+                color: rgba(0, 0, 0, 0.5);
+
+                p {
+                    margin-bottom: 21px;
+                }
+            }
+
+            &--description {
+                font-size: 18px;
+                line-height: 120%;
+                letter-spacing: -0.01em;
+
+                p {
+                    margin-bottom: 20px;
+                    margin-left: 40px;
+                }
+            }
+        }
+
+        &__right {
+            background: #FFFFFF;
+            box-shadow: 0px 24px 60px rgba(0, 0, 0, 0.06), 0px 6px 24px rgba(0, 0, 0, 0.06);
+            border-radius: 5px;
+            margin-bottom: 80px;
+
+            &--title {
+                font-weight: 700;
+                font-size: 24px;
+                line-height: 120%;
+                letter-spacing: -0.02em;
+            }
+
+            &--info {
+                margin-top: 12px;
+                font-size: 18px;
+                line-height: 120%;
+                letter-spacing: -0.01em;
+                color: rgba(0, 0, 0, 0.5);
+            }
+
+            &--description {
+                margin: 48px 60px 24px 60px;
+                display: flex;
+                flex-direction: column;
+            }
+
+            &--input {
+                margin: 0 60px 48px 60px;
+                display: flex;
+                flex-direction: column;
+            }
+
+            &--name,
+            &--message,
+            &--phone {
+                background: rgba(0, 0, 0, 0.06);
+                border-radius: 4px;
+                margin-bottom: 12px;
+                border: none;
+            }
+
+            &--message {
+                height: 120px;
+                resize: none;
+                padding: 16px 0 0 20px;
+            }
+
+            &--name,
+            &--phone {
+                height: 50px;
+                padding: 17px 0 17px 20px;
+            }
+
+            .request__button {
+                border: none;
+                height: 50px;
+                background: #A7CC4A;
+                border-radius: 4px;
+                font-weight: 600;
+                font-size: 18px;
+                line-height: 100%;
+                text-align: center;
+                letter-spacing: -0.01em;
+                color: #FFFFFF;
+            }
+        }
+    }
+
+    .block-footer__nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 112px;
+    }
+
+    .footer-info__menu {
+        display: flex;
+        justify-content: space-between;
+       
+
+        a {
+            color: rgba(0, 0, 0, 0.5);
+            font-weight: 500;
+            font-size: 15px;
+            line-height: 110%;
+            letter-spacing: -0.02em;
+            margin-right: 32px;
+        }
+    }
+
+    .footer-info__copyright {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 130%;
+        text-align: right;
+        letter-spacing: 0.12em;
+        color: rgba(0, 0, 0, 0.3);
     }
 }
